# StockNewsAgregator

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
ArticleService/: pom.xml
ArticleService/src/main/resources/: application.properties
CompanyService/: pom.xml
CompanyService/src/main/resources/: application.properties
Frontend/: package.json
Frontend/src/: index.html  styles.scss
Frontend/src/app/: app.routes.ts
NewsDownloadService/: .env.example  .gitignore  main.py  requirements.txt
NewsDownloadService/app/: logging_setup.py
NewstDownloadService/app/: config.py  main.py  models.py  orchestrator.py  paywall_detector.py  sources.py  text_cleaner.py
StockNewsAgregatorFront/gpw-news/: README.md  angular.json  package-lock.json
StockNewsAnalysisService/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
StockNewsAnalysisService/app/: __init__.py  main.py
StockNewsAnalysisService/app/api/: dependencies.py  health.py  matching.py  sentiment.py
StockNewsAnalysisService/app/core/: config.py  logging.py
StockNewsAnalysisService/app/models/: __init__.py  engine.py  factory.py  heuristic_engine.py  transformers_engine.py
StockNewsAnalysisService/app/schemas/: base.py  matching.py  sentiment.py
StockNewsAnalysisService/app/services/: context_service.py  matching_service.py  sentiment_service.py
StockNewsAnalysisService/tests/: test_api.py  test_context_service.py
src/gpw_news_aggregator/: __init__.py  aggregator.py  cli.py  models.py  sources.py
tests/: test_aggregator.py  test_cli.py  test_models.py
(+139 files in other folders)
