[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpw-news-aggregator"
version = "0.1.0"
description = "A news aggregator for the Warsaw Stock Exchange (GPW)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "feedparser>=6.0",
    "requests>=2.32",
    "python-dateutil>=2.9",
]

[project.scripts]
gpw-news = "gpw_news_aggregator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
