[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-news-analysis-service"
version = "0.1.0"
description = "Company relevance and entity-level sentiment analysis for stock news"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "ftfy>=6.3,<7.0",
    "pydantic-settings>=2.7,<3.0",
    "sentencepiece>=0.2,<1.0",
    "torch>=2.5,<3.0",
    "transformers>=4.48,<5.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

